--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "admin": "^1.4.1",
+    "firebase": "^10.12.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
